feat: initialize index.vue and update editor types in various files
